--- a/src/templates/components/alert-message.html
+++ b/src/templates/components/alert-message.html
@@ -3,13 +3,9 @@
     <span class="icon js-emoji"></span>
     <span class="text js-message"></span>
   </div>
-  <div class="actions _hide js-actions">
-    <span class="action -undo">
-      <i class="icon">
-        <img class="undo" src="/static/img/undo.svg">
-      </i>
-      Desfazer
-    </span>
+  <div class="actions js-actions">
+    <a href="#" class="action js-actionLink">
+    </a>
   </div>
   <div class="progress js-progress"></div>
   <div class="background"></div>
