hide opinion balloon when cards is empty

--- a/src/templates/pages/document.html
+++ b/src/templates/pages/document.html
@@ -72,7 +72,7 @@
     </aside>
   </div>
   <article>
-    <header>
+    <header class="js-documentHeader">
       <div class="info">
         <div class="group">
           {% if object.closing_date|is_open %}
