--- a/src/templates/pages/document.html
+++ b/src/templates/pages/document.html
@@ -3,6 +3,21 @@
 {% block title %}
   {{ object.document.title }}
 {% endblock title %}
+
+{% block metatags %}
+<meta name="description" content="{{ object.document.description }}">
+<meta property="og:title" content="{{ object.document.title }}">
+<meta property="og:site_name" content="Wikilegis">
+<meta property="og:description" content="{{ object.document.description }}">
+<meta property="og:image" content="{{ request.scheme }}://{{ request.META.HTTP_HOST }}{% static 'img/facebook-share-image.jpg' %}">
+<meta property="og:image:type" content="image/jpg">
+<meta property="og:image:width" content="600">
+<meta property="og:image:height" content="300">
+<meta property="og:type" content="website">
+<meta property="og:type" content="website">
+<meta property="twitter:image" content="{{ request.scheme }}://{{ request.META.HTTP_HOST }}{% static 'img/facebook-share-image.jpg' %}">
+{% endblock metatags %}
+
 {% block content %}
 
 {% can_suggest object request.user as selection_enabled %}
@@ -71,8 +86,9 @@
       {% endif %}
       <div class="item">
         <div class="social">
-          <a class="facebook" href="#"></a>
-          <a class="twitter" href="#"></a>
+          <a class="facebook" data-social="facebook" title="Facebook" href="http://www.facebook.com/sharer/sharer.php?u={{request.build_absolute_uri}}" target="_blank" rel="noopener"></a>
+          <a class="twitter" data-social="twitter" title="Twitter" href="http://twitter.com/share?text=Eu já estou participando, participe você também!&url={{request.build_absolute_uri}}" target="_blank" rel="noopener"></a>
+          <a class="twitter" data-social="whatsapp" title="Whatsapp" href="https://api.whatsapp.com/send?text=Eu já estou participando, participe você também!%0A{{request.build_absolute_uri}}%20" target="_blank" rel="noopener"></a>
         </div>
       </div>
     </aside>
