Remove background from our default button

--- a/src/static/scss/components/_app-button.scss
+++ b/src/static/scss/components/_app-button.scss
@@ -13,6 +13,7 @@
   text-transform: uppercase;
 
   color: #FFF;
+  background-color: transparent;
 
   @include bp-mediumup {
     font-size: $font-size-centi;
