--- a/src/static/scss/components/_suggestion-opinion.scss
+++ b/src/static/scss/components/_suggestion-opinion.scss
@@ -1,61 +1,27 @@
 .suggestion-opinion {
-  display: flex;
-  display: inline-flex;
-  align-items: center;
+  font-size: $font-size-nano;
+  letter-spacing: 1px;
 
-  padding: .5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 2.5rem;
+  height: 2.5rem;
 
   cursor: pointer;
 
+  color: $color-deep-gray;
+  background-color: transparent;
+
+  @include icon(comment, 17px, 18px);
+  @include hovering-label(right, 0);
   @include bp-mediumup {
-    padding: .5rem 1rem;
-
-    &:hover > .text {
-      transform: translateX(0);
-      color: $color-deep-gray;
-
-      opacity: 1;
-    }
   }
+
 
   &.-all {
-    & > .icon {
-      width: 1.75rem;
-      height: 1.75rem;
-
-      background-image: url('../img/comments.svg');
-
-      @include bp-mediumup {
-        margin-top: 0;
-      }
-    }
-  }
-
-  & > .text {
-    font-size: .625rem;
-    font-weight: bold;
-
-    transition: all .15s $swift-out;
-    transform: translateX(-5%);
-    letter-spacing: 1px;
-    text-transform: uppercase;
-
-    opacity: 0;
-  }
-
-  & > .icon {
-    box-sizing: border-box;
-    width: 1.25rem;
-    height: 1.25rem;
-
-    background-image: url('../img/comment.svg');
-    background-repeat: no-repeat;
-    background-size: 100%;
-
-    @include bp-mediumup {
-      margin-top: .2rem;
-      margin-right: .5rem;
-    }
+    @include icon(comments, 22px, 20px);
   }
 }
 
