--- a/src/static/scss/components/_document-body.scss
+++ b/src/static/scss/components/_document-body.scss
@@ -7,14 +7,14 @@
   padding-left: 4.6rem;
 
   @include bp-smallonly {
+    padding-top: 2.5rem;
     padding-right: 1rem;
     padding-left: 1rem;
-    padding-top: 2.5rem;
   }
   @include bp-mediumonly {
+    padding-top: 3.5rem;
     padding-right: 1.6rem;
     padding-left: 1.6rem;
-    padding-top: 3.5rem;
   }
 
   &.-voidselection {
@@ -44,21 +44,14 @@
   & > article > p > .suggestion-opinion {
     position: absolute;
     top: 0;
-  }
-
-  & > article > header > .suggestion-opinion {
-    right: -7.2rem;
-
-    @include bp-mediumup {
-      right: -9.5rem;
-    }
+    left: 100%;
   }
 
   & > article > p > .suggestion-opinion {
-    right: -7rem;
+    margin-top: -.3rem;
 
     @include bp-mediumup {
-      right: -9rem;
+      margin-top: -.1rem;
     }
   }
 
