--- a/src/templates/pages/document.html
+++ b/src/templates/pages/document.html
@@ -9,13 +9,13 @@
 <meta property="og:title" content="{{ object.document.title }}">
 <meta property="og:site_name" content="Wikilegis">
 <meta property="og:description" content="{{ object.document.description }}">
-<meta property="og:image" content="{{ request.scheme }}://{{ request.META.HTTP_HOST }}{% static 'img/facebook-share-image.jpg' %}">
+<meta property="og:image" content="{{ request.scheme }}://{{ request.META.HTTP_HOST }}{% static 'img/share-wikilegis.jpg' %}">
 <meta property="og:image:type" content="image/jpg">
 <meta property="og:image:width" content="600">
 <meta property="og:image:height" content="300">
 <meta property="og:type" content="website">
 <meta property="og:type" content="website">
-<meta property="twitter:image" content="{{ request.scheme }}://{{ request.META.HTTP_HOST }}{% static 'img/facebook-share-image.jpg' %}">
+<meta property="twitter:image" content="{{ request.scheme }}://{{ request.META.HTTP_HOST }}{% static 'img/share-wikilegis.jpg' %}">
 {% endblock metatags %}
 
 {% block content %}
@@ -88,7 +88,7 @@
         <div class="social">
           <a class="facebook" data-social="facebook" title="Facebook" href="http://www.facebook.com/sharer/sharer.php?u={{request.build_absolute_uri}}" target="_blank" rel="noopener"></a>
           <a class="twitter" data-social="twitter" title="Twitter" href="http://twitter.com/share?text=Eu já estou participando, participe você também!&url={{request.build_absolute_uri}}" target="_blank" rel="noopener"></a>
-          <a class="twitter" data-social="whatsapp" title="Whatsapp" href="https://api.whatsapp.com/send?text=Eu já estou participando, participe você também!%0A{{request.build_absolute_uri}}%20" target="_blank" rel="noopener"></a>
+          <a class="whatsapp" data-social="whatsapp" title="Whatsapp" href="https://api.whatsapp.com/send?text=Eu já estou participando, participe você também!%0A{{request.build_absolute_uri}}%20" target="_blank" rel="noopener"></a>
         </div>
       </div>
     </aside>
