--- a/src/templates/structure/base.html
+++ b/src/templates/structure/base.html
@@ -57,6 +57,7 @@
       <script src="{% static 'js/components/body/view.js' %}"></script>
       <script src="{% static 'js/components/textInput/view.js' %}"></script>
       <script src="{% static 'js/components/alertMessage/view.js' %}"></script>
+      <script src="{% static 'js/components/alertMessage/controller.js' %}"></script>
       <script src="{% static 'js/pages/base.js' %}"></script>
       {% block page_js %}
       {% endblock page_js %}
