--- a/src/static/scss/components/_opinion-card.scss
+++ b/src/static/scss/components/_opinion-card.scss
@@ -248,6 +248,7 @@
       pointer-events: none; // This is set back to auto inside the show-opinion-button
 
       opacity: 0;
+      color: #FFF;
 
       &.-inactive {
         animation: hide-opinion-button .3s $swift-out forwards;
@@ -264,11 +265,11 @@
       @extend .app-button;
       @extend .app-button.-red;
       @extend .app-button.-circle;
-      @extend .app-button.-circle.-toleft;
 
       animation-delay: .7s;
 
       @include icon('disagree');
+      @include hovering-label(left, 1em, #FFF, 1rem);
     }
 
     & > .indifferent {
@@ -280,6 +281,7 @@
 
       animation-delay: .8s;
 
+      @include hovering-label(bottom, 1em, #FFF, 1rem);
       @include bp-mediumup {
         margin: 0 3rem;
       }
@@ -290,10 +292,10 @@
       @extend .app-button;
       @extend .app-button.-green;
       @extend .app-button.-circle;
-      @extend .app-button.-circle.-toright;
 
       animation-delay: .9s;
 
+      @include hovering-label(right, 1em, #FFF, 1rem);
       @include icon('agree');
     }
 
@@ -301,7 +303,6 @@
       @extend .app-button;
       @extend .app-button.-white;
       @extend .app-button.-circle;
-      @extend .app-button.-circle.-toleft;
       @extend .app-button.-circle.-small;
 
       position: absolute;
@@ -310,6 +311,7 @@
       animation-delay: 1s;
 
       @include icon('skip');
+      @include hovering-label(left, 1em, #FFF, 1rem, after, absolute);
     }
   }
 }
