--- a/src/templates/pages/document.html
+++ b/src/templates/pages/document.html
@@ -48,7 +48,7 @@
         {% group_suggestions object as has_suggestions %}
       {% endif %}
       {% if has_suggestions %}
-      <button class="suggestion-opinion -all js-opinionButton" aria-label="Ver opiniões"></button>
+      <button class="suggestion-opinion -all js-opinionButton" aria-label="Ver todas as opiniões"></button>
       {% endif %}
     </header>
     {% for excerpt in object.document.excerpts.all %}
@@ -65,7 +65,7 @@
           {% excerpt_suggestions object excerpt as has_suggestions %}
         {% endif %}
         {% if has_suggestions %}
-        <button class="suggestion-opinion js-opinionButton" aria-label="Ver opiniões"></button>
+        <button class="suggestion-opinion js-opinionButton" aria-label="Ver opiniões deste trecho"></button>
         {% endif %}
       </p>
       {% endif %}
