Add a notice to unlogged users when voting on opinions [WIP]

--- a/src/static/scss/components/_opinion-card.scss
+++ b/src/static/scss/components/_opinion-card.scss
@@ -313,5 +313,18 @@
       @include icon('skip');
       @include hovering-label(left, 1em, #FFF, 1rem, auto, after, absolute);
     }
+
+    & > .notice {
+      font-size: $font-size-base;
+
+      margin-right: auto;
+
+      color: #FFF;
+
+      > a {
+        font-weight: 600;
+        text-decoration: underline;
+      }
+    }
   }
 }
