Update alert icon size
Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

--- a/src/static/scss/components/_alert-message.scss
+++ b/src/static/scss/components/_alert-message.scss
@@ -100,7 +100,7 @@
 
       &.-undo {
         display: flex;
-        @include icon('undo');
+        @include icon('undo', 1.5em, 1.5em);
       }
 
       &.-undo::before {
