--- a/src/templates/pages/document.html
+++ b/src/templates/pages/document.html
@@ -3,6 +3,21 @@
 {% block title %}
   {{ object.document.title }}
 {% endblock title %}
+
+{% block metatags %}
+<meta name="description" content="{{ object.document.description }}">
+<meta property="og:title" content="{{ object.document.title }}">
+<meta property="og:site_name" content="Wikilegis">
+<meta property="og:description" content="{{ object.document.description }}">
+<meta property="og:image" content="{{ request.scheme }}://{{ request.META.HTTP_HOST }}{% static 'img/share-wikilegis.jpg' %}">
+<meta property="og:image:type" content="image/jpg">
+<meta property="og:image:width" content="600">
+<meta property="og:image:height" content="300">
+<meta property="og:type" content="website">
+<meta property="og:type" content="website">
+<meta property="twitter:image" content="{{ request.scheme }}://{{ request.META.HTTP_HOST }}{% static 'img/share-wikilegis.jpg' %}">
+{% endblock metatags %}
+
 {% block content %}
 
 {% can_suggest object request.user as selection_enabled %}
@@ -10,65 +25,7 @@
   <div class="wrapper">
     <div class="invisible"></div>
     <aside class="info-bar">
-      <div class="item">
-        {% if object.document.document_type %}
-        <span class="epigraph">{{ object.document.document_type.initials }} {{ object.document.number }}/{{ object.document.year }}</span>
-        {% endif %}
-      </div>
-      {% if object.document.infos.authors.all %}
-      <div class="item">
-        <span class="title">Autor</span>
-        {% for author in object.document.infos.authors.all %}
-          {% if author.infos.cd_id %}
-          <a class="autor" target="_blank" href="http://www2.camara.leg.br/deputados/pesquisa/layouts_deputados_biografia?pk={{author.infos.cd_id}}">
-            <div class="info">
-              <span class="text -name">{{ author.name }}</span>
-              <span class="text">{{author.author_type}} {% if author.infos %}({{author.infos.party_initials}}-{{author.infos.uf}}){% endif %}</span>
-            </div>
-            {% if author.infos %}
-            <img src="{{author.infos.image_url}}">
-            {% endif %}
-          </a>
-          {% else %}
-          <div class="autor">
-            <div class="info">
-              <span class="text -name">{{ author.name }}</span>
-              <span class="text">{{author.author_type}} {% if author.infos.party_initials and author.infos.uf %}({{author.infos.party_initials}}-{{author.infos.uf}}){% endif %}</span>
-            </div>
-            {% if author.infos.image_url %}
-            <img src="{{author.infos.image_url}}">
-            {% endif %}
-          </div>
-          {% endif %}
-        {% endfor %}
-      </div>
-      {% endif %}
-      {% if object.document.infos.legislative_body and object.document.infos.status and object.document.infos.cd_id %}
-      <a class="item" target="_blank" href="https://www.camara.leg.br/proposicoesWeb/fichadetramitacao?idProposicao={{object.document.infos.cd_id}}">
-        <span class="title">Situação</span>
-        <span class="text">{{ object.document.infos.legislative_body }} - {{ object.document.infos.status }}</span>
-      </a>
-      {% endif %}
-      {% if object.document.themes.all %}
-      <div class="item">
-        <span class="title">Temas:</span>
-        <ul class="themes">
-          {% for theme in object.document.themes.all %}
-            <li class="theme-tag">
-              <span class="dot" style="background-color: {{theme.color}}"></span>
-              {{ theme.name }}
-            </li>
-          {% endfor %}
-        </ul>
-      </div>
-      {% endif %}
-      {% if object.document.videos.all %}
-        {% for video in object.document.videos.all %}
-        <div class="item -video">
-          <iframe width="100%" src="https://www.youtube.com/embed/{{video.video_id}}" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </div>
-        {% endfor %}
-      {% endif %}
+      {% include "components/document-info.html" %}
     </aside>
   </div>
   <article>
