Feature/undo suggestion (#75)
* Update alert-message to receive any action

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Create undo_suggestion url and returning on suggestion created

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Undo suggestion

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Remove highlight and populate suggestionInput

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Fix eslint

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Fix flake8 errors

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

* Update alert icon size

Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

--- a/src/static/scss/components/_alert-message.scss
+++ b/src/static/scss/components/_alert-message.scss
@@ -30,16 +30,10 @@
   }
 
   &.-color {
+    & > .progress,
     .background {
       transform: scaleY(1);
-    }
-
-    &.-success {
-      // background-color: $color-brand;
-    }
-
-    &.-fail {
-      // background-color: $color-red;
+      background-color: lighten($color-deep-gray, 10%);
     }
   }
 
@@ -97,17 +91,24 @@
       &:hover {
         opacity: 1;
 
-        & > .icon {
+        &.-undo::before {
           transition: all .55s $swift-out;
           transform: rotate(360deg);
         }
+
       }
 
-      & > .icon {
+      &.-undo {
+        display: flex;
+        @include icon('undo', 1.5em, 1.5em);
+      }
+
+      &.-undo::before {
+        display: inline-flex;
         margin-top: 1px;
         margin-right: .5rem;
 
-        transform-origin: 47% 42%;
+        transform-origin: 47% 49.5%;
       }
     }
   }
