--- a/src/static/scss/base/_reusables.scss
+++ b/src/static/scss/base/_reusables.scss
@@ -47,7 +47,7 @@
 }
 
 // Mixin to add icons by using SASS variables. No markup shit.
-@mixin icon($icon, $background-size: 100%, $width:1em, $height:1em, $margin:0) {
+@mixin icon($icon, $width:1em, $height:1em, $background-size: 100%, $margin:0) {
   &::before {
     display: inline-flex;
 
@@ -67,7 +67,7 @@
 }
 
 // Floating label for elements with content based of aria-label attributes. Available on :hover
-@mixin hovering-label($direction, $margin: .5em, $width: auto, $color:inherit, $precedence: after, $button-position:relative) {
+@mixin hovering-label($direction, $margin: .5em, $color:inherit, $font-size: 1em, $width: auto, $precedence: after, $button-position:relative) {
   position: $button-position;
 
   @include bp-mediumup {
