--- a/src/static/scss/components/_suggestion-opinion.scss
+++ b/src/static/scss/components/_suggestion-opinion.scss
@@ -15,10 +15,7 @@
   background-color: transparent;
 
   @include icon(comment, 17px, 18px);
-  @include hovering-label(right, 0, 6rem);
-  @include bp-mediumup {
-  }
-
+  @include hovering-label(right, 0, inherit, 1em, 6rem);
 
   &.-all {
     @include icon(comments, 22px, 20px);
