Create animate scroll

--- a/src/templates/pages/home.html
+++ b/src/templates/pages/home.html
@@ -151,5 +151,6 @@
   <script src="{% static 'js/components/documentBody/view.js' %}"></script>
   <script src="{% static 'js/components/navBurger/view.js' %}"></script>
   <script src="{% static 'js/components/searchInput/view.js' %}"></script>
+  <script src="{% static 'js/components/animateScroll/view.js' %}"></script>
   <script src="{% static 'js/pages/home.js' %}"></script>
 {% endblock page_js %}
