--- a/src/static/scss/components/_start-header.scss
+++ b/src/static/scss/components/_start-header.scss
@@ -28,7 +28,7 @@
     }
 
     & > h1,
-    & > .solid-button {
+    & > .app-button {
       margin-top: 2.625rem;
     }
 
@@ -36,9 +36,12 @@
       margin-top: 1.5rem;
     }
 
-    & > .solid-button {
-      width: 8rem;
+    & > .app-button {
       padding: 1rem 2rem;
+
+      @include bp-smallup {
+        width: 10rem;
+      }
     }
   }
 
