--- a/src/static/scss/components/_document-excerpt.scss
+++ b/src/static/scss/components/_document-excerpt.scss
@@ -3,18 +3,20 @@
 
   &.-supressed {
     & * {
-      color: #ccc;
+      color: #CCC;
     }
   }
 }
 
 .document-excerpt {
+  padding: .25em 0;
   &.-enabled {
     user-select: text;
+
     color: #000;
   }
 
   .highlighted {
-    background-color: rgba(255, 255, 0, 0.3);
+    background-color: rgba(255, 255, 0, .3);
   }
 }
