Unify textselection and opinion onboardings

--- a/src/static/scss/components/_app-modal.scss
+++ b/src/static/scss/components/_app-modal.scss
@@ -58,6 +58,13 @@
     @include bp-mediumup {
       padding: 4rem;
     }
+
+    & .step {
+      display: none;
+      &.-active {
+        display: block;
+      }
+    }
   }
 
   &.-show {
