Add notice messages for logged out users on certain actions

--- a/src/static/scss/components/_opinion-card.scss
+++ b/src/static/scss/components/_opinion-card.scss
@@ -315,15 +315,33 @@
     }
 
     & > .notice {
-      font-size: $font-size-base;
+      font-size: $font-size-centi;
 
       margin-right: auto;
 
+      animation: simple-reveal .5s .7s ease forwards;
+
+      opacity: 0;
       color: #FFF;
 
-      > a {
-        font-weight: 600;
-        text-decoration: underline;
+      text-align: left;
+      font-weight: 400;
+
+      width: 10rem;
+
+      @include bp-mediumup {
+        font-size: $font-size-base;
+        width: auto;
+      }
+
+      &.-inactive {
+        animation: simple-fade .3s ease forwards;
+        pointer-events: none;
+        opacity: 1;
+      }
+
+      & > a {
+        @include link-style($font-weight: 700, $negative: true);
       }
     }
   }
