--- a/src/static/scss/ambience/_animation.scss
+++ b/src/static/scss/ambience/_animation.scss
@@ -121,3 +121,27 @@ $swift-out: cubic-bezier(.55, 0, .1, 1);
     opacity: 0;
   }
 }
+
+
+@keyframes simple-reveal {
+  0% {
+    opacity: 0;
+  }
+
+
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes simple-fade {
+  0% {
+    opacity: 1;
+  }
+
+
+  100% {
+    opacity: 0;
+  }
+}
+
