Fix opening all opinions through the appropriate button in the document
If you opened the opinion-modal through any of the excerpt buttons, and then tried to open again now through the project button, the -active/-inactive classes of the opinion-cards would retain their previous values from the last action.

--- a/src/templates/pages/document.html
+++ b/src/templates/pages/document.html
@@ -48,7 +48,7 @@
         {% group_suggestions object as has_suggestions %}
       {% endif %}
       {% if has_suggestions %}
-      <button class="suggestion-opinion -all js-opinionButton" aria-label="Ver todas as opiniões"></button>
+      <button class="suggestion-opinion -all js-allOpinionsButton" aria-label="Ver todas as opiniões"></button>
       {% endif %}
     </header>
     {% for excerpt in object.document.excerpts.all %}
