Replace buttons markup with actual <button> instead of <a>
Since an <a> needs an href attribute, we needed to use a placeholder on it, by default: "#".
This was causing the side effect of the page scrolling back to the top whenever you clicked on a vote button.
Also, a <button> is definitely the better semantic option in this case.

--- a/src/static/scss/components/_opinion-card.scss
+++ b/src/static/scss/components/_opinion-card.scss
@@ -243,7 +243,7 @@
       margin-top: 2rem;
     }
 
-    & > a {
+    & > button {
       animation: show-opinion-button .3s $swift-out forwards;
       pointer-events: none; // This is set back to auto inside the show-opinion-button
 
