Improve howto icon

--- a/src/static/scss/app.scss
+++ b/src/static/scss/app.scss
@@ -48,6 +48,7 @@
 @import 'components/info-button';
 @import 'components/alert-message';
 @import 'components/start-header';
+@import 'components/howto-button';
 
 // Vendor
 @import 'vendor/tooltip';
