--- a/src/static/scss/components/_opinion-card.scss
+++ b/src/static/scss/components/_opinion-card.scss
@@ -95,6 +95,10 @@
 
         background-color: transparent;
       }
+
+      & > .close-icon {
+        right: 1.7rem;
+      }
     }
 
     & > .usercontent {
