--- a/src/templates/components/app-onboarding.html
+++ b/src/templates/components/app-onboarding.html
@@ -4,21 +4,20 @@
 
 {% block extra_classes %}-onboarding js-appOnboarding{% endblock %}
 
-
 {% block content %}
   <div class="step js-step">
     <img src="{% static 'img/opinion-onboarding.svg' %}">
     <h2>Avalie as opiniões de outros cidadãos </h2>
     <p>Antes de dar a sua própria opinião, passe pelas opiniões de outros cidadãos.<br>Assim você contribui para entendermos melhor como a população avalia o texto e evita dar uma opinião igual a de outra pessoa!</p>
-    <a href="#" class="app-button -green js-next">Próximo</a>
+    <button class="app-button -green js-next">Próximo</button>
   </div>
   <div class="step js-step">
     <img src="{% static 'img/text-select-onboarding.svg' %}">
     <h2>Selecione um trecho do texto para dar sua opinião</h2>
     <p>Escolha um trecho de um artigo individual e digite uma opinião sobre ele. Basta dar um longo toque sobre o texto ou clicar e arrastar o mouse para selecioná-lo.</p>
 
-    <a href="#" class="app-button -green js-button js-action">Quero Participar!</a>
-    <a href="#" class="app-button -clear js-close">Não, não quero melhorar o meu país</a>
+    <button class="app-button -green js-button js-action">Quero Participar!</button>
+    <button class="app-button -clear js-close">Fechar</button>
   </div>
 {% endblock content %}
 
