--- a/src/static/scss/components/_document-body.scss
+++ b/src/static/scss/components/_document-body.scss
@@ -5,17 +5,32 @@
 
   padding-top: 2rem;
   padding-right: 4.6rem;
+  padding-bottom: 5rem;
   padding-left: 4.6rem;
 
   @include bp-smallonly {
-    padding-top: 4rem;
-    padding-right: 1rem;
-    padding-left: 1rem;
+    padding: 3rem 1rem;
   }
   @include bp-mediumonly {
-    padding-top: 4rem;
-    padding-right: 1.6rem;
-    padding-left: 1.6rem;
+    padding: 4rem 1.6rem;
+  }
+
+  &::before {
+    position: fixed;
+    z-index: 1;
+    top: calc(100% - 5rem);
+    right: 0;
+    bottom: 0;
+    left: 0;
+
+    content: '';
+    pointer-events: none;
+
+    background: linear-gradient(transparent, #FFF);
+
+    @include bp-smallonly {
+      top: calc(100% - 3rem);
+    }
   }
 
   &.-voidselection {
